[package]
name = "hello"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "1.3", features = ["postgres", "r2d2"] }
diesel_migrations = "1.3"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool", "postgres_pool"]